# GradWerk-2

./: .gitignore  Dockerfile  MEASURMENTS.md  README.md  cheatsheet.txt  docker-compose.yaml
flowcharts/: test1.json  test2.json  test3.json
nginx/: nginx.conf
project-python/: cheatsheet.txt  requirements.txt
project-python/src/: main.py
project-rust/: Cargo.toml  Rocket.toml
project-rust/src/: main.rs
project-rust/src/modeler/: model.rs
project-rust/src/modeler/components/: create.rs  dispose.rs  element.rs  process.rs
project-rust/src/modeler/utils/: consts.rs  random.rs  round.rs  shortcuts.rs
project-rust/src/routers/: pages.rs  simulator.rs
project-rust/src/routers/utils/: capacity_calculator.rs  element_parser.rs  load_calculator.rs  result_decoder.rs
project-rust/src/static/: utils.js
project-rust/src/static/index/: binders.js  components.js  main.js
project-rust/src/static/index/css/: drawflow.css
project-rust/src/static/index/handlers/: buttons.js  drawflow.js  initializers.js
project-rust/src/static/index/handlers/nodes/: general.js  load.js  modal.js
project-rust/src/static/resources/: empty.json  library.json
project-rust/src/static/results/: chart_factory.js  main.js
project-rust/src/static/results/css/: charts.css  heading.css  logs.css  resource-table.css
project-rust/src/templates/: base.html.tera  index.html.tera  results.html.tera
src/: main.py
src/modeler/: model.py
src/modeler/utils/: consts.py  (+1 more)
src/routers/: pages.py  simulator.py
src/static/: utils.js
src/templates/: base.html  index.html  results.html
(+52 files in other folders)
