[package]
name = "project-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
ordered-float = "5"
rand = "0.9.2"
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
