[package]
name = "project-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
ordered-float = {version = "5.1.0", features = ["serde"]}
rand = "0.9.2"
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
cpu-time = "1.0.0"
sysinfo = "0.37.2"